test/modules/cassella/ambigmodmain.unnested2.good
error: Ambiguous main() function (use --main-module to disambiguate):
ambigmodmain.unnested2.chpl:3: note: in module M
ambigmodmain.unnested2.chpl:8: note: in module M
